<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math Get To 24</string>
    <string name="title_activity_intro_screen">IntroScreenActivity1</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="level_easy">Easy (1)</string>
    <string name="level_medium">Med (1)</string>
    <string name="level_hard">Hard (1)</string>
    <string name="how_do_you_24">(How can you get to 24?)</string>
    <string name="fmt_you_got_right">Yay, you got 24!!\n%s</string>
    <string name="fmt_sorry_wrong">Sorry, Get to 24 with:\n%s</string>
    <string name="how_do_you_get_24">How can you get to 24?</string>
    <string name="game_over">Game Over...</string>
    <string name="operatorMultiply">operator multiply</string>
    <string name="operatorDivide">operator divide</string>
    <string name="welcome">New Text\nhi\nthere</string>
</resources>
