<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_math24"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.wordpress.tonytam.mathgetto24.Math24">


    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/overallLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff407599"
            android:clickable="true">


            <GridLayout
                android:id="@+id/numberLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp">

                <Button
                    android:id="@+id/numNE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="4"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/num_10"
                    android:onClick="cardsTouched" />

                <Button
                    android:id="@+id/numNW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/num_1"
                    android:onClick="cardsTouched" />

                <Button
                    android:id="@+id/numSE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="4"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/num_7"
                    android:onClick="cardsTouched" />

                <Button
                    android:id="@+id/numSW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/num_3"
                    android:onClick="cardsTouched" />
            </GridLayout>

            <FrameLayout
                android:id="@+id/player2Area"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp">

                <Button
                    android:id="@+id/player2Got24"
                    android:layout_width="80dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center"
                    android:background="@drawable/go_button"
                    android:clickable="true"
                    android:longClickable="true"
                    android:onClick="player2GotAnswer" />

                <LinearLayout
                    android:id="@+id/player2TimeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player2Timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:rotation="180"
                        android:text="123"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffc045c4" />

                    <TextView
                        android:id="@+id/player2TimerLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rotation="180"
                        android:text="Time"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/player2ScoreLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player2Score"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:rotation="180"
                        android:text="0"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffc045c4"

                        />

                    <TextView
                        android:id="@+id/player2Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rotation="180"
                        android:text="Player 2"
                        android:textAppearance="?android:attr/textAppearanceMedium"

                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/labelAnswer2"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:rotation="180"
                    android:text="@string/how_do_you_24"
                    android:textAlignment="center"
                    android:textColor="#ffffffff" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/player1Area"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/player1Got24"
                    android:layout_width="80dp"
                    android:layout_height="72dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:background="@drawable/go_button"
                    android:clickable="true"
                    android:onClick="player1GotAnswer" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player1TimerLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="right"
                        android:text="Time"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/player1Timer"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center_horizontal|right"
                        android:editable="false"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="123"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffc045c4" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/player1ScoreLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/player1Label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Player 1"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/player1Score"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="0"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffc045c4" />

                </LinearLayout>

                <TextView
                    android:id="@+id/labelAnswer1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:text="@string/how_do_you_24"
                    android:textAlignment="center"
                    android:textColor="#ffffffff" />

            </FrameLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:visibility="invisible" />

            <RadioGroup
                android:id="@+id/gameLevelRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/player1Area"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/easyLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="true"
                    android:onClick="levelChangeClick"
                    android:text="@string/level_easy" />

                <RadioButton
                    android:id="@+id/mediumLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="levelChangeClick"
                    android:text="@string/level_medium" />

                <RadioButton
                    android:id="@+id/hardLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="levelChangeClick"
                    android:text="@string/level_hard" />
            </RadioGroup>

            <Button
                android:id="@+id/soundToggleButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/gameLevelRadioGroup"
                android:layout_toLeftOf="@+id/gameLevelRadioGroup"
                android:background="@drawable/sound" />

            <LinearLayout
                android:id="@+id/operatorLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:orientation="vertical">


                <Button
                    android:id="@+id/operatorPlus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/plus"
                    android:focusableInTouchMode="false"
                    android:onClick="operatorsTouched"
                    android:tag="+" />

                <Button
                    android:id="@+id/operatorMinus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/minus"
                    android:onClick="operatorsTouched"
                    android:tag="-" />

                <Button
                    android:id="@+id/operatorMultiply"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/multiply"
                    android:contentDescription="@string/operatorMultiply"
                    android:onClick="operatorsTouched"
                    android:tag="×" />

                <Button
                    android:id="@+id/operatorDivide"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/divide"
                    android:contentDescription="@string/operatorDivide"
                    android:onClick="operatorsTouched"
                    android:tag="÷" />
            </LinearLayout>

            <TextView
                android:id="@+id/labelMiddleInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/player1Area"
                android:layout_below="@+id/player2Area"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|center"
                android:alpha="1.0"
                android:background="#000000ff"
                android:clickable="true"
                android:enabled="true"
                android:gravity="center"
                android:maxLines="4"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="#ffffffff"
                android:textIsSelectable="true"
                android:visibility="invisible" />

        </RelativeLayout>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>
